--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.ololo.messenger" >
 
     <application
         android:name="android.support.multidex.MultiDexApplication"
-        tools:replace="android:icon,android:theme"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon,android:theme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -19,6 +18,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ChooseContactActivity"
+            android:label="@string/title_activity_choose_contact" >
+        </activity>
+        <activity
+            android:name=".DialogActivity" >
         </activity>
     </application>
 
