--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile "com.android.support:multidex:1.0.1"
     compile 'com.github.satyan:sugar:1.3'
     compile "org.scala-lang:scala-library:2.11.7"
+    compile "org.java-websocket:Java-WebSocket:1.3.0"
 }
